Fixed header resizing and MCQ options being too large in smaller screens

--- a/public/css/main-chatbot.css
+++ b/public/css/main-chatbot.css
@@ -12,7 +12,6 @@ body {
 @media screen and (max-width: 1024px) {
   .mdl-layout__header {
     display: block;
-    height: 20px;
   }
 }
 
@@ -179,7 +178,8 @@ main {
   border-radius: 25px;
   margin-top: 10px;
   margin-bottom: 10px;
-  margin-left: 25px;
+  margin-left: 10px;
+  margin-right: 15px;
 }
 #message-form {
   display: flex;
@@ -226,6 +226,9 @@ main {
 
 
 @media screen and (max-width: 610px) {
+  .mdl-layout__header {
+    height: 20px;
+  }
   header {
     height: 113px;
     padding-bottom: 80px !important;
